# ine-api

./: .gitignore  LICENSE  PLAN.md  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-07-09-cache-design.md  2026-07-09-file-download-design.md  2026-07-09-namespaces-refactor-design.md
examples/: quickstart_async.py  quickstart_sync.py
ine/: __init__.py  _backend.py  _cache.py  _config.py  _files.py  _filters.py  _paginator.py  _urls.py  async_client.py  client.py  errors.py  main.py
ine/models/: __init__.py  _base.py  datos.py  maestros.py  operaciones.py  publicaciones.py  series.py  tablas.py  variables.py
ine/services/: __init__.py  _base.py  datos.py  maestros.py  operaciones.py  publicaciones.py  series.py  tablas.py  valores.py  variables.py
tests/: conftest.py  test_backend.py  test_cache.py  test_cache_integration.py  test_client_async.py  test_client_sync.py  test_config.py  test_contract.py  test_dataframe.py  test_download.py  test_errors.py  test_files.py  test_filters.py  test_maestros.py  test_models_base.py  test_models_datos.py  test_models_operaciones.py  test_namespaces_params.py  test_operaciones_datos.py  test_paginator.py  test_public_api.py  test_publicaciones.py  test_retries.py  test_series.py  test_tablas.py  test_urls.py  test_valores.py  test_variables.py  test_volume.py
