[project]
name = "ine-api"
version = "0.1.1"
description = "Cliente Python para la API Tempus del INE (Instituto Nacional de Estadística de España)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "httpx-retries>=0.6.0",
    "pydantic>=2.13.4",
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/juanmicl/ine-api"
Repository = "https://github.com/juanmicl/ine-api"
Issues = "https://github.com/juanmicl/ine-api/issues"
Changelog = "https://github.com/juanmicl/ine-api/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# El método `list` sombrea el builtin `list` en las anotaciones de tipo del
# módulo: mypy requiere `List` de typing (UP006/UP035 piden `list`, pero entonces
# mypy ve el método, no el builtin). Excepción limitada a este único archivo.
"ine/services/operaciones.py" = ["UP006", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
anyio_mode = "strict"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["ine"]
